# HabitFlow

./: .gitignore  MANUAL_CODIGO.md  PLAN.md  README.md  local.properties.example  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/unmsm/habitflow/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/unmsm/habitflow/: HabitFlowApplication.kt  MainActivity.kt
app/src/main/java/com/unmsm/habitflow/data/: Mappers.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/unmsm/habitflow/: ExampleUnitTest.kt
backend/: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/.github/: CODEOWNERS
backend/.github/workflows/: deploy.yml
backend/credentials/: c21200065.env.example
backend/docs/: branch-protection.md  deployment.md  google-auth-testing.md  mobile-api.postman_collection.json  nginx-setup.md  render-deployment.md
backend/scripts/: seed_test_accounts.py
backend/src/app/: main.py
backend/src/app/core/: discovery.py
backend/src/app/projects/c21200065/api/: ai.py  auth.py  deps.py  geo_events.py  geo_events_orm.py  habits.py  router.py  schemas.py  storage.py
backend/src/app/projects/c21200065/api/graphql/: router.py  types.py
backend/src/app/projects/c21200065/api/graphql/resolvers/: geo_events.py
backend/src/app/projects/c21200065/domain/: auth_service.py  exceptions.py  habit_interpretation_service.py  measurement.py  ports.py  security.py  storage_service.py  voice_conversation_service.py
backend/src/app/projects/c21200065/domain/models/: file.py  geo_event.py  user.py
backend/src/app/projects/c21200065/infra/: settings.py  token.py
backend/src/app/projects/c21200065/infra/clients/: google.py  llm.py  storage.py
backend/src/app/projects/c21200065/infra/db/: mongo.py  postgres.py  redis.py
backend/src/app/projects/c21200065/infra/orm/: __init__.py  auth.py  file.py  geo_event.py  habit.py  rewards.py
backend/src/app/projects/c21200065/infra/repositories/: auth_orm_repo.py  file_orm_repo.py  geo_event_orm_repo.py  geo_event_repo.py  habit_repo.py  refresh_token_repo.py  user_repo.py
backend/tests/: test_ai_conversation_features.py  test_google_auth.py  test_habit_interpretation.py  test_habit_persistence.py  test_measurement.py  test_voice_conversation.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+82 files in other folders)
